--- a/Index.html
+++ b/Index.html
@@ -15,7 +15,7 @@
             <a href="/reloj.html">⌚</a> 
             <a href="/Tiempo">Tiempo</a>
             <a href="/creadorLink.html">Creador links</a>
-            <a href="/creadorContraseñas">🔓</a>
+            <a href="/creadorContrasenas">🔓</a>
         </nav>
     </header>
 <main>
