--- a/html/creadorLink.html
+++ b/html/creadorLink.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Project Break Dashboard</title>
 </head>
 <body>
@@ -12,11 +12,11 @@
             Dashboard
         </h4>
         <nav>
-            <a href="/Index.html">Home</a>
-            <a href="/reloj.html">⌚</a> 
-            <a href="/Tiempo">Tiempo</a>
-            <a href="/creadorLink.html">Creador links</a>
-            <a href="/creadorContrasenas">🔓</a>
+            <a href="../Index.html">Home</a>
+            <a href="./reloj.html">⌚</a> 
+            <a href="./Tiempo">Tiempo</a>
+            <a href="./creadorLink.html">Creador links</a>
+            <a href="./creadorContrasenas">🔓</a>
         </nav>
     </header>
 <main>
@@ -24,13 +24,13 @@
 <article id="links">
     <form>
         <legend>Introduzca tus enlaces de interes</legend>
-        <input type="text" placeholder="Nombre del enlace">
-        <input type="text" placeholder="Pega el enlace">
+        <input type="text" placeholder="Nombre del enlace"/>
+        <input type="text" placeholder="Pega el enlace"/>
         <button>Enviar</button>
     </form>
 </article>
 </section>
 </main>    
 </body>
-<script src="./js/script.js"></script>
+<script src="./js/contrasenas.js"></script>
 </html>
