--- a/html/reloj.html
+++ b/html/reloj.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Reloj Digital</title>
 </head>
 <body>
@@ -12,11 +12,11 @@
            Reloj Digital
         </h4>
         <nav>
-            <a href="/Index.html">Home</a>
-            <a href="/reloj.html">⌚</a> 
-            <a href="/Tiempo">Tiempo</a>
-            <a href="/creadorLink.html">Creador links</a>
-            <a href="/creadorContrasenas">🔓</a>
+            <a href="../Index.html">Home</a>
+            <a href="./reloj.html">⌚</a> 
+            <a href="./Tiempo">Tiempo</a>
+            <a href="./creadorLink.html">Creador links</a>
+            <a href="./creadorContrasenas">🔓</a>
         </nav>
     </header>
 <main>
