--- a/Index.html
+++ b/Index.html
@@ -12,10 +12,10 @@
             Dashboard
         </h4>
         <nav>
-            <a href="/reloj.html">⌚</a> 
-            <a href="/Tiempo">Tiempo</a>
-            <a href="/creadorLink.html">Creador links</a>
-            <a href="/creadorContrasenas">🔓</a>
+            <a href="./reloj.html">⌚</a> 
+            <a href="./Tiempo">Tiempo</a>
+            <a href="./creadorLink.html">Creador links</a>
+            <a href="./creadorContrasenas">🔓</a>
         </nav>
     </header>
 <main>
