--- a/html/reloj.html
+++ b/html/reloj.html
@@ -13,10 +13,10 @@
         </h4>
         <nav>
             <a href="../Index.html">Home</a>
-            <a href="./reloj.html">⌚</a> 
-            <a href="./Tiempo">Tiempo</a>
-            <a href="./creadorLink.html">Creador links</a>
-            <a href="./creadorContrasenas">🔓</a>
+            <a href="../html/reloj.html">⌚</a> 
+            <a href="../html/Tiempo">Tiempo</a>
+            <a href="../html/creadorLink.html">Creador links</a>
+            <a href="../html/creadorContrasenas">🔓</a>
         </nav>
     </header>
 <main>
@@ -30,5 +30,5 @@
 </section>
 </main>    
 </body>
-<script src="./js/reloj.js"></script>
+<script src="../js/reloj.js"></script>
 </html>
