--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a href="../html/reloj.html">⌚</a> 
             <a href="../html/Tiempo">Tiempo</a>
             <a href="../html/creadorLink.html">Creador links</a>
-            <a href="../html/creadorContrasenas.html">🔓</a>
+            <a href="../html/contrasenas.html">🔓</a>
         </nav>
     </header>
 <main>
