--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
             Dashboard
         </h4>
         <nav>
-            <a href="../html/reloj.html">⌚</a> 
-            <a href="../html/Tiempo">Tiempo</a>
-            <a href="../html/creadorLink.html">Creador links</a>
-            <a href="../html/contrasenas.html">🔓</a>
+            <a href="./html/reloj.html">⌚</a> 
+            <a href="./html/Tiempo">Tiempo</a>
+            <a href="./html/creadorLink.html">Creador links</a>
+            <a href="./html/contrasenas.html">🔓</a>
         </nav>
     </header>
 <main>
