--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <input type="text" id="nombre"name="nombre" placeholder="Nombre del enlace"/>
         <label for="enlace">Enlace:</label>
         <input type="text" id="enlace" name="enlace" placeholder="Pega el enlace"/>
-        <button class="btn">Enviar</button>
+        <button class="btn" id="btn_guardar">Guardar</button>
     </form>
     <div id="favoritos"></div>
 </article>
@@ -39,6 +39,7 @@
         <label for="number">Escoje un numero</label>
         <input id="number" type="number" min="12" max="50" step="1" value="12">
         <button class="btn" id="btn_contraseña">Crear</button>
+        <div id="div_contra"></div>
     </form>
 </article>
 </main>    
