--- a/html/creadorLink.html
+++ b/html/creadorLink.html
@@ -28,9 +28,10 @@
         <input type="text" id="nombre"name="nombre" placeholder="Nombre del enlace"/>
         <label for="enlace">Enlace:</label>
         <input type="text" id="enlace" name="enlace" placeholder="Pega el enlace"/>
-        <button class="btn">Enviar</button>
+        <button id='btn_guardar'class="btn">Enviar</button>
+        <ul id="favoritos"></ul>
     </form>
-    <div id="favoritos"></div>
+    
 </article>
 </section>
 </main>    
