--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
         <label for="enlace">Enlace:</label>
         <input type="text" id="enlace" name="enlace" placeholder="Pega el enlace"/>
         <button class="btn" id="btn_guardar">Guardar</button>
+        <ul id="favoritos"></ul>
     </form>
-    <div id="favoritos"></div>
+    
 </article>
 <article id="contraseñas">
     <form>
