--- a/html/contrasenas.html
+++ b/html/contrasenas.html
@@ -12,10 +12,11 @@
           contraseñas
         </h4>
         <nav>
-            <a href="../index.html">Home</a>
-            <a href="/reloj.html">⌚</a> 
-            <a href="/tiempo.html">Tiempo</a>
-            <a href="/creadorLink.html">Creador links</a>
+            <a href="../Index.html">Home</a>
+            <a href="../html/reloj.html">⌚</a> 
+            <a href="../html/tiempo.html">Tiempo</a>
+            <a href="../html/creadorLink.html">Creador links</a>
+            <a href="../html/contrasenas.html">🔓</a>
         </nav>
     </header>
 <main>
