--- a/html/tiempo.html
+++ b/html/tiempo.html
@@ -1,1 +1,28 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/style.css">
+    <title>Project Break Dashboard</title>
+</head>
+<body>
+    <header>
+        <h4>
+           Links
+        </h4>
+        <nav>
+            <a href="../Index.html">Home</a>
+            <a href="../html/reloj.html">⌚</a> 
+            <a href="../html/tiempo.html">Tiempo</a>
+            <a href="../html/creadorLink.html">Creador links</a>
+            <a href="../html/contrasenas.html">🔓</a>
+        </nav>
+    </header>
+<main>
+<section>
+    <article id="tiempo"></article>
+<body>
+    
+</body>
+</html>
