--- a/html/creadorLink.html
+++ b/html/creadorLink.html
@@ -14,9 +14,9 @@
         <nav>
             <a href="../Index.html">Home</a>
             <a href="../html/reloj.html">⌚</a> 
-            <a href="../html/tiempo">Tiempo</a>
+            <a href="../html/tiempo.html">Tiempo</a>
             <a href="../html/creadorLink.html">Creador links</a>
-            <a href="../html/creadorContrasenas">🔓</a>
+            <a href="../html/contrasenas.html">🔓</a>
         </nav>
     </header>
 <main>
