--- a/html/reloj.html
+++ b/html/reloj.html
@@ -12,11 +12,11 @@
            Reloj Digital
         </h4>
         <nav>
-            <a href="../Index.html">Home</a>
+            <a href="../index.html">Home</a>
             <a href="../html/reloj.html">⌚</a> 
-            <a href="../html/Tiempo">Tiempo</a>
+            <a href="../html/clima.html">Clima  </a>
             <a href="../html/creadorLink.html">Creador links</a>
-            <a href="../html/creadorContrasenas">🔓</a>
+            <a href="../html/contrasenas.html">🔓</a>
         </nav>
     </header>
 <main>
