--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </h4>
         <nav>
             <a href="./html/reloj.html">⌚</a> 
-            <a href="./html/Tiempo">Tiempo</a>
+            <a href="./html/clima.html">Clima</a>
             <a href="./html/creadorLink.html">Creador links</a>
             <a href="./html/contrasenas.html">🔓</a>
         </nav>
