--- a/html/creadorLink.html
+++ b/html/creadorLink.html
@@ -14,7 +14,7 @@
         <nav>
             <a href="../Index.html">Home</a>
             <a href="../html/reloj.html">⌚</a> 
-            <a href="../html/tiempo.html">Tiempo</a>
+            <a href="../html/clima.html">Clima</a>
             <a href="../html/creadorLink.html">Creador links</a>
             <a href="../html/contrasenas.html">🔓</a>
         </nav>
