--- a/html/clima.html
+++ b/html/clima.html
@@ -12,23 +12,15 @@
            Clima
         </h4>
         <nav>
-            <a href="../Index.html">Home</a>
-            <a href="../html/reloj.html">⌚</a> 
-            <a href="../html/creadorLink.html">Creador links</a>
-            <a href="../html/contrasenas.html">🔓</a>
+            <a href="../index.html"><img src="../assets/iconos/casa.png"></a> 
+            <a href="../html/reloj.html"><img src="../assets/iconos/reloj.png"></a> 
+            <a href="../html/creadorLink.html"><img src="../assets/iconos/cadena.png"></a>
+            <a href="../html/contrasenas.html"><img src="../assets/iconos/candado.png"></a>
         </nav>
     </header>
 <main>
 <section>
-    <article id="clima">
-        <form id="city-form">
-            <label for="ciudad">Ciudad:</label>
-            <input type="text" id="city" name="ciudad" required />
-            <label for="pais">Pais:</label>
-            <input type="text" id="pais" name="pais" required />
-            <button type="submit" id="btn-clima">Consultar</button>
-          </form>
-    </article>
+    <article id="clima"></article>
 <body>
     
 </body>
