--- a/html/contrasenas.html
+++ b/html/contrasenas.html
@@ -12,11 +12,10 @@
           contraseñas
         </h4>
         <nav>
-            <a href="../Index.html">Home</a>
-            <a href="../html/reloj.html">⌚</a> 
-            <a href="../html/clima.html">Clima</a>
-            <a href="../html/creadorLink.html">Creador links</a>
-            <a href="../html/contrasenas.html">🔓</a>
+            <a href="../index.html"><img src="../assets/iconos/casa.png"></a>
+            <a href="../html/reloj.html"><img src="../assets/iconos/reloj.png"></a> 
+            <a href="../html/clima.html"><img src="../assets/iconos/parcialmente-nublado.png"></a>
+            <a href="../html/creadorLink.html"><img src="../assets/iconos/cadena.png"></a>
         </nav>
     </header>
 <main>
@@ -25,8 +24,9 @@
         <form>
             <legend>Creador contraseñas</legend>
             <label for="number">Escoje un numero</label>
-            <input id="number" type="number" min="12" max="50" step="1" value="12">
-            <button class="btn" id="btn_contraseña">Crear</button>
+            <div>
+            <input id="number" type="number" min="12" max="50" step="1" value="12"><button class="btn" id="btn_contraseña">Crear</button>
+            </div>
             <div id="div_contra"></div>
         </form>
     </article>
