--- a/html/creadorLink.html
+++ b/html/creadorLink.html
@@ -12,11 +12,10 @@
            Links
         </h4>
         <nav>
-            <a href="../Index.html">Home</a>
-            <a href="../html/reloj.html">⌚</a> 
-            <a href="../html/clima.html">Clima</a>
-            <a href="../html/creadorLink.html">Creador links</a>
-            <a href="../html/contrasenas.html">🔓</a>
+            <a href="../index.html"><img src="../assets/iconos/casa.png"></a> 
+            <a href="../html/reloj.html"><img src="../assets/iconos/reloj.png"></a> 
+            <a href="../html/clima.html"><img src="../assets/iconos/parcialmente-nublado.png"></a>
+            <a href="../html/contrasenas.html"><img src="../assets/iconos/candado.png"></a>
         </nav>
     </header>
 <main>
