--- a/html/clima.html
+++ b/html/clima.html
@@ -20,7 +20,7 @@
     </header>
 <main>
 <section>
-    <article id="clima"></article>
+    <article id="clima"><div class="climaXhoras" id="horasContainer"></div></article>
 <body>
     
 </body>
