--- a/index.html
+++ b/index.html
@@ -38,14 +38,15 @@
         <label for="enlace">Enlace:</label>
         <input type="text" id="enlace" name="enlace" placeholder="Pega el enlace"/>
         <button class="btn" id="btn_guardar">Guardar</button>
+          </form>
+        
         <ul id="favoritos"></ul>
-    </form>
-</article>
+
 </section>
 <section>
 <article id="reloj"> 
 </article>
-
+<article id="clima"><div class="climaXhoras" id="horasContainer"></div></article>
 </section>
 </main>    
 </body>
