--- a/html/creadorLink.html
+++ b/html/creadorLink.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Noto+Sans&family=Poppins:wght@100&display=swap" rel="stylesheet">
     <title>Project Break Dashboard</title>
 </head>
 <body>
@@ -23,7 +26,7 @@
 <article id="links">
     <form>
         <legend>Introduzca tus enlaces de interes</legend>
-        <label for="nombre">Nombre Enlace:</label>
+        <label for="nombre">Nombre del enlace:</label>
         <input type="text" id="nombre"name="nombre" placeholder="Nombre del enlace"/>
         <label for="enlace">Enlace:</label>
         <input type="text" id="enlace" name="enlace" placeholder="Pega el enlace"/>
