--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </article>
 <article id="links">
     <form>
-        <legend>Introduzca tus enlaces de interes</legend>
+        <legend>Introduzca tus enlaces</legend>
         <label for="nombre">Nombre del enlace:</label>
         <input type="text" id="nombre"name="nombre" placeholder="Nombre del enlace"/>
         <label for="enlace">Enlace:</label>
