--- a/html/creadorLink.html
+++ b/html/creadorLink.html
@@ -25,7 +25,7 @@
 <section>
 <article id="links">
     <form>
-        <legend>Introduzca tus enlaces de interes</legend>
+        <legend>Introduzca tus enlaces</legend>
         <label for="nombre">Nombre del enlace:</label>
         <input type="text" id="nombre"name="nombre" placeholder="Nombre del enlace"/>
         <label for="enlace">Enlace:</label>
