--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </nav>
     </header>
 <main>
-<section id="creadores">
+<section>
     <article id="contraseñas">
         <form>
             <legend>Creador contraseñas</legend>
@@ -42,14 +42,13 @@
         <input type="text" id="enlace" name="enlace" placeholder="Pega el enlace"/>
         <button class="btn" id="btn_guardar">Guardar</button>
           </form>
-        
         <ul id="favoritos"></ul>
-
-</section>
+    </section>
 <section>
-<article id="reloj"> 
-</article>
-<article id="clima"><div class="climaXhoras" id="horasContainer"></div></article>
+    <article id="reloj"></article>
+    <article id="clima">
+        <div class="climaXhoras" id="horasContainer"></div>
+    </article>
 </section>
 </main>    
 </body>
